@@ -50,7 +50,7 @@ void timer::draw()
 {
   setNormal();
   setColor (fc::Default, fc::Default);
-  clrscr();
+  clearArea();
   gotoxy (1,1);
   print ("---------------\n");
   print ("Press Q to quit\n");
